Decorate breaking changes with optional detailed information for reporting